--- a/CityFinder.html
+++ b/CityFinder.html
@@ -8,7 +8,7 @@
 <div ng-app="City_App" ng-controller="City_Controller"> 	
 	<div class="w3-card-2 w3-margin" style="max-width:400px;">
 		<header class="w3-container w3-light-grey w3-padding-16">
-			<input ng-model="CityOfChoice"><button ng-click="FetchCity()">Fetch</button>
+			<input ng-model="City_Choice"><button ng-click="FetchCity()">Fetch</button>
 			<h3>Response from Marketplace:</h3>
 		</header>
 		<ul class="w3-ul">
@@ -22,11 +22,11 @@
 <script>
 	var City_App = angular.module ( "City_App", []);
 	City_App.controller ( "City_Controller", function ( $scope, $http ){
-		$scope.FavouriteCities = [ "Antwerpen", "Newcastle", "Valencia", "Antananarivo" ];
-		$scope.CityOfChoice = $scope.FavouriteCities [ Math.floor ( Math.random () * $scope.FavouriteCities.length )];
+		$scope.Cities_Favourite = [ "Antwerpen", "Newcastle", "Valencia", "Antananarivo" ];
+		$scope.City_Choice = $scope.Cities_Favourite [ Math.floor ( Math.random () * $scope.Cities_Favourite.length )];
 		
 		$scope.FetchCity = function (){
-			var Query = "https://andruxnet-world-cities-v1.p.mashape.com/?query=" + $scope.CityOfChoice + "&searchby=city";
+			var Query = "https://andruxnet-world-cities-v1.p.mashape.com/?query=" + $scope.City_Choice + "&searchby=city";
 
 			$http ({
 			  method: "GET",
