--- a/CityFinder.html
+++ b/CityFinder.html
@@ -32,7 +32,7 @@
 			  method: "GET",
 			  url: Query,
 			  headers: {
-				"X-Mashape-Key": "28KQQZziX3mshu8PTfV45i31b2kfp1pZO4YjsnJlZgkl9FvsSj",
+				"X-Mashape-Key": "<Your key here>",
 				"Accept": "application/json"
 			  }
 			}).then ( function ( response ){
